flux/apps/arr/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: default
spec:
  selector:
    matchLabels:
      app: lidarr
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:2.13.3
          resources:
            requests:
              cpu: 55m
              memory: 257Mi
            limits:
              memory: 257Mi
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: lidarr-data
              mountPath: /config
            - name: media-music
              mountPath: /music
            - name: qbt-downloads
              mountPath: /downloads
      volumes:
        - name: lidarr-data
          nfs:
            server: datasphere
            path: /Root/Volumes/lidarr
        - name: media-music
          nfs:
            server: datasphere
            path: /Root/Media/Music
        - name: qbt-downloads
          nfs:
            server: datasphere
            path: /Root/Volumes/qbt/downloads
