flux/apps/arr/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: default
spec:
  selector:
    app: lidarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8686
