flux/apps/arr/lidarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lidarr.home`)
      kind: Rule
      services:
        - name: lidarr
          port: 80
    - match: Host(`lidarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: lidarr
          port: 80
